# Django-shop

./: .gitignore  LICENSE  README.md  config.example.json  data.json  json.json  pyproject.toml  requirements.txt
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
main/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20190809_1138.py  0002_auto_20190830_1549.py  0002_user_buyrecord.py  0003_auto_20190807_2220.py  0003_auto_20190910_1404.py  0004_auto_20190807_2221.py  0004_auto_20190910_1404.py  0005_auto_20190807_2223.py
main/static/main/css/: materialize.css
product/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_auto_20190704_2134.py  0002_review.py  0003_product_amount.py  0003_review_username.py  0004_auto_20190806_2209.py  0004_auto_20190910_1318.py  0005_auto_20190807_1131.py  0005_review_date.py  0006_auto_20190807_1134.py  0006_auto_20190910_1337.py  0007_auto_20190910_1340.py
shop/: settings.py  urls.py
templates/cart/: buyPage.html  cart.html  done.html
templates/cart/includes/: table.html
templates/main/: account.html  accountSettings.html  accountTransactions.html  buyPage.html  cart.html  forgot.html  item.html  login.html  main.html  register.html  resetPass.html  transactionDetail.html
templates/main/includes/: footer.html  messages.html  navbar.html  sidebarAcc.html
templates/product/: home.html  item.html
